--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -3,18 +3,19 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
-	"type": "module",
 	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js",
-		"test": "jest --verbose"
+		"start": "cross-env NODE_ENV=production node index.js",
+		"dev": "cross-env NODE_ENV=development nodemon index.js",
+		"test": "cross-env NODE_ENV=test jest --verbose --runInBand"
 	},
 	"author": "ismelich",
 	"license": "ISC",
 	"devDependencies": {
+		"cross-env": "^7.0.2",
 		"dotenv": "^8.2.0",
 		"jest": "^26.4.2",
-		"nodemon": "^2.0.4"
+		"nodemon": "^2.0.4",
+		"supertest": "^4.0.2"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
