--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"express-async-errors": "^3.1.1",
 		"mongoose": "^5.10.6",
 		"mongoose-unique-validator": "^2.0.3"
 	},
