--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -18,6 +18,7 @@
 		"supertest": "^4.0.2"
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
