--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -11,10 +11,12 @@
 	"author": "ismelich",
 	"license": "ISC",
 	"devDependencies": {
+		"ava": "^3.13.0",
 		"cross-env": "^7.0.2",
 		"dotenv": "^8.2.0",
 		"jest": "^26.4.2",
 		"nodemon": "^2.0.4",
+		"sinon": "^9.0.3",
 		"supertest": "^4.0.2"
 	},
 	"dependencies": {
